XO_Project_UAT/Project--XOGrp--UAT/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upsell_Amount__c</fullName>
        <label>Upsell Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VIP_Onboarding_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP Onboarding Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voicemail_Type__c</fullName>
        <description>This field will be filled in by New Voice Media to show what line was called to leave the voicemail</description>
        <label>Voicemail Type</label>
        <picklist>
            <picklistValues>
                <fullName>CBSS Rotating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Specialists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TK Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blitz SSE Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Solutions Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onboarding</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Email_Formula__c</fullName>
        <formula>SuppliedEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebsiteGrade__c</fullName>
        <label>Website Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Written_Cancellation_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Written Cancellation Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Action__c</fullName>
        <label>Distribution action</label>
        <picklist>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_count__c</fullName>
        <description>The number of times this record has been assigned via Distribution Engine</description>
        <inlineHelpText>The number of times this record has been assigned via Distribution Engine</inlineHelpText>
        <label>Distribution count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Is_archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is distributed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is auto reassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_trigger_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is triggered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_archive_date__c</fullName>
        <label>Last archive date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_distributed__c</fullName>
        <label>Date last distributed to user</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_reassigned__c</fullName>
        <label>Date last auto reassigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Source_queue__c</fullName>
        <label>Source queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Time_to_action_mins__c</fullName>
        <label>Time to action (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pastduediff__c</fullName>
        <formula>If(
   And(DATETIMEVALUE(CreatedDate) = DATETIMEVALUE(LastModifiedDate), Past_Due_Potential__c=Past_Due_on_Case_Open__c*2),
  &quot;Update&quot;, 
     if(OR(Past_Due_Potential__c = Account_Past_Due_Balance__c, 
           Past_Due_Potential__c = Past_Due_on_Case_Open__c,
           CreatedDate &lt;= DATETIMEVALUE(&quot;2018-02-12 23:00:00&quot;)
           ),
           &quot;NoNeed&quot;, &quot;Checking&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>past due diff</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllCases</fullName>
        <columns>Due_Date__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed,Closed Duplicate,Closed Declined,Closed Completed,Closed Satisfactory</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed Customer Cancelled,Closed No Show,Canceled - Waiting on Payment,Cancel</value>
        </filters>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cancel_Case</fullName>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.X1_Cancels</value>
        </filters>
        <label>All Cancel Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed,Closed Duplicate,Closed Declined,Closed Completed,Closed Satisfactory</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed Customer Cancelled,Closed No Show,Canceled - Waiting on Payment,Cancel</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Asset_Collection,Case.Inbound,Case.X2_Onboarding</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Max Attempts,Closed Customer Cancelled,Closed No Show</value>
        </filters>
        <label>All Cases AS Team</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Asset_Collection_Cases</fullName>
        <columns>Due_Date__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Rate_Plan_Name__c</columns>
        <columns>Term_Start_Date__c</columns>
        <columns>LDE_Launch_Date__c</columns>
        <columns>Possible_Renewal__c</columns>
        <columns>Account_VIP_Program__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Asset_Collection</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed,Cancelled,Complete</value>
        </filters>
        <label>All Open Asset Collection Cases</label>
        <sharedTo>
            <group>Sales_Service_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Inbound_Cases</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>Account_VIP_Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Inbound</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed,Cancelled,Complete</value>
        </filters>
        <label>All Open Inbound Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Onboarding_Cases</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>Account_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.X2_Onboarding</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed,Closed Declined,Closed Completed,Closed Satisfactory Storefront,Max A</value>
        </filters>
        <label>All Open Onboarding Cases</label>
        <sharedTo>
            <group>Sales_Service_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Review_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Review_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.X3_Reviews</value>
        </filters>
        <label>All Review Cases</label>
    </listViews>
    <listViews>
        <fullName>Asset_Collection_Initiated_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Asset Collection Initiated Queue</label>
        <queue>Asset_Collection_Initiated_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Blitz_SSE_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Blitz SSE Queue</label>
        <queue>Blitz_SSE_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CBSS_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CBSS</label>
        <queue>CBSS</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CB_Inbound_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>CB Inbound Queue</label>
        <queue>CB_Inbound_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Billing_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Client Billing Queue</label>
        <queue>Client_Billing_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Client_Solutions_Team_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Client Solutions Team</label>
        <queue>Client_Solutions_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Service_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_NAME</field>
            <operation>contains</operation>
            <value>Klemp,Kuck,Andrews,Moore,Vogel</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed,Closed Duplicate,Cancelled,Complete</value>
        </filters>
        <label>Customer Service</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Asset_Collection</fullName>
        <active>true</active>
        <businessProcess>Asset Collection</businessProcess>
        <label>Asset Collection</label>
    </recordTypes>
    <recordTypes>
        <fullName>CB_Inbound</fullName>
        <active>true</active>
        <businessProcess>CB Inbound</businessProcess>
        <description>CSP-2783</description>
        <label>CB Inbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>Client_Billing</fullName>
        <active>true</active>
        <businessProcess>Client Billing</businessProcess>
        <label>Client Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <description>Handling abnormal case data</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_House_Collections</fullName>
        <active>true</active>
        <businessProcess>In House Collections</businessProcess>
        <description>CSP-2612</description>
        <label>In House Collections</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inbound</fullName>
        <active>true</active>
        <businessProcess>Inbound</businessProcess>
        <label>Inbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rep_Billing</fullName>
        <active>true</active>
        <businessProcess>Rep Billing</businessProcess>
        <label>Rep Billing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Voicemail</fullName>
        <active>true</active>
        <businessProcess>Voicemail</businessProcess>
        <description>This is the record type for voicemails created by NVM</description>
        <label>Voicemail</label>
    </recordTypes>
    <recordTypes>
        <fullName>X1_Cancels</fullName>
        <active>true</active>
        <businessProcess>Cancels</businessProcess>
        <label>1 - Cancels</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2_Onboarding</fullName>
        <active>true</active>
        <businessProcess>Onboarding</businessProcess>
        <label>2 - Onboarding</label>
    </recordTypes>
    <recordTypes>
        <fullName>X3_Reviews</fullName>
        <active>true</active>
        <businessProcess>Reviews</businessProcess>
        <label>3 - Reviews</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>No_Account_Not_Allow_Close_Case</fullName>
        <active>true</active>
        <description>CSP-2806 No Account not allow close case</description>
        <errorConditionFormula>And(
   ISCHANGED(Status),
   ISPICKVAL(Status, &apos;Closed&apos;),
   RecordType.Name = &quot;1 - Cancels&quot;, 
   ISBLANK(AccountId) 
  )</errorConditionFormula>
        <errorMessage>Case must be associated to Account in order to close</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Change_Owner_for_Cancel_Case</fullName>
        <active>true</active>
        <description>SS-7754</description>
        <errorConditionFormula>AND( 
ISCHANGED(OwnerId), 
PRIORVALUE(OwnerId) != $User.Id, 
PRIORVALUE(OwnerId) != &apos;005f100000IUm7P&apos;,
LEFT(PRIORVALUE(OwnerId),3) != &apos;00G&apos;, 
OR(RecordType.Name = &apos;1 - Cancels&apos;, 
RecordType.Name = &apos;Client Billing&apos;,
RecordType.Name = &apos;In House Collections&apos;,
RecordType.Name = &apos;CB Inbound&apos;),
NOT($User.Transfer_Case__c), 
$Profile.Name != &apos;System Administrator&apos;, 
$Profile.Name != &apos;Local Core Sales Operations&apos;, 
$Profile.Name != &apos;Local Sales Data Team&apos;, 
$Profile.Name != &apos;Service Accounts&apos;, 
$Profile.Name != &apos;Service Accounts Hubspot&apos; 
)</errorConditionFormula>
        <errorMessage>You don&apos;t have permission to change the Case Owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Change_Owner_from_Queue_to_Other</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(OwnerId),
OR(PRIORVALUE(OwnerId) = &apos;00Gf1000002nwVe&apos;,
PRIORVALUE(OwnerId) = &apos;00Gf1000002rvZI&apos;,
PRIORVALUE(OwnerId) = &apos;00Gf1000002rnFs&apos;),
OR(RecordType.Name = &apos;Client Billing&apos;,
RecordType.Name = &apos;In House Collections&apos;,
RecordType.Name = &apos;CB Inbound&apos;),
Owner:User.Casesafe_ID__c != $User.Casesafe_ID__c,
NOT($User.Transfer_Case__c),
$Profile.Name = &apos;Local Core Finance - ARR&apos;
)</errorConditionFormula>
        <errorMessage>You can only assign the case to you.</errorMessage>
    </validationRules>
</CustomObject>